// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignupScreenTemplate renders correctly with en-US locale 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#070724",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "space-between",
              "marginLeft": 48,
              "marginRight": 48,
            },
            {
              "backgroundColor": "#070724",
            },
            [
              {
                "maxHeight": 650,
                "maxWidth": 650,
              },
              undefined,
            ],
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "rgba(231, 224, 236, 1)",
                  "borderTopLeftRadius": 2,
                  "borderTopRightRadius": 2,
                },
                {
                  "fontFamily": "calibre_app_regular",
                  "marginBottom": 16,
                  "width": 600,
                },
              ]
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#ff4310",
                  "bottom": 0,
                  "height": 1,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "transform": [
                    {
                      "scaleY": 2,
                    },
                  ],
                  "zIndex": 1,
                }
              }
              testID="text-input-underline"
            />
            <View
              onLayout={[Function]}
              style={
                [
                  {
                    "flexGrow": 1,
                    "paddingBottom": 0,
                    "paddingTop": 0,
                  },
                  {
                    "minHeight": 56,
                  },
                ]
              }
            >
              <View
                pointerEvents="none"
                style={
                  [
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    {
                      "overflow": "hidden",
                    },
                    {
                      "zIndex": 3,
                    },
                  ]
                }
              >
                <View
                  collapsable={false}
                  pointerEvents="none"
                  style={
                    {
                      "bottom": 0,
                      "left": 0,
                      "opacity": 1,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "transform": [
                        {
                          "translateX": 0,
                        },
                      ],
                      "width": 750,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "width": 73,
                      }
                    }
                  >
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      onLayout={[Function]}
                      onTextLayout={[Function]}
                      style={
                        {
                          "color": "#ff4310",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 0,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": 0,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-active"
                    >
                      EMAIL ADDRESS
                    </Text>
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      style={
                        {
                          "color": "#ff4310",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 1,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": 0,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-inactive"
                    >
                      EMAIL ADDRESS
                    </Text>
                  </View>
                </View>
              </View>
              <TextInput
                cursorColor="#ff4310"
                editable={true}
                keyboardType="email-address"
                maxFontSizeMultiplier={1.5}
                multiline={false}
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="transparent"
                selectionColor="#ffffff"
                style={
                  [
                    {
                      "flexGrow": 1,
                      "margin": 0,
                    },
                    {},
                    {
                      "paddingBottom": 4,
                      "paddingTop": 24,
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": undefined,
                      "letterSpacing": 0.15,
                      "lineHeight": undefined,
                      "minWidth": 65,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "textAlign": "left",
                      "textAlignVertical": "center",
                    },
                    undefined,
                    [
                      {},
                    ],
                    undefined,
                  ]
                }
                testID="text-input-flat"
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
          </View>
          <Text
            collapsable={false}
            maxFontSizeMultiplier={1.5}
            onLayout={[Function]}
            style={
              {
                "color": "#ff4310",
                "fontFamily": "System",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0.25,
                "lineHeight": 20,
                "opacity": 0,
                "paddingHorizontal": 12,
                "paddingVertical": 4,
                "textAlign": "left",
                "transform": [],
                "writingDirection": "ltr",
              }
            }
          />
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "rgba(231, 224, 236, 1)",
                  "borderTopLeftRadius": 2,
                  "borderTopRightRadius": 2,
                },
                {
                  "fontFamily": "calibre_app_regular",
                  "marginBottom": 16,
                  "width": 600,
                },
              ]
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#ff4310",
                  "bottom": 0,
                  "height": 1,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "transform": [
                    {
                      "scaleY": 2,
                    },
                  ],
                  "zIndex": 1,
                }
              }
              testID="text-input-underline"
            />
            <View
              onLayout={[Function]}
              style={
                [
                  {
                    "flexGrow": 1,
                    "paddingBottom": 0,
                    "paddingTop": 0,
                  },
                  {
                    "minHeight": 56,
                  },
                ]
              }
            >
              <View
                pointerEvents="none"
                style={
                  [
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    {
                      "overflow": "hidden",
                    },
                    {
                      "zIndex": 3,
                    },
                  ]
                }
              >
                <View
                  collapsable={false}
                  pointerEvents="none"
                  style={
                    {
                      "bottom": 0,
                      "left": 0,
                      "opacity": 1,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "transform": [
                        {
                          "translateX": 0,
                        },
                      ],
                      "width": 750,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "width": 73,
                      }
                    }
                  >
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      onLayout={[Function]}
                      onTextLayout={[Function]}
                      style={
                        {
                          "color": "#ff4310",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 0,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": 0,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-active"
                    >
                      PASSWORD
                    </Text>
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      style={
                        {
                          "color": "#ff4310",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 1,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": 0,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-inactive"
                    >
                      PASSWORD
                    </Text>
                  </View>
                </View>
              </View>
              <TextInput
                cursorColor="#ff4310"
                editable={true}
                keyboardType="email-address"
                maxFontSizeMultiplier={1.5}
                multiline={false}
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="transparent"
                secureTextEntry={true}
                selectionColor="#ffffff"
                style={
                  [
                    {
                      "flexGrow": 1,
                      "margin": 0,
                    },
                    {},
                    {
                      "paddingBottom": 4,
                      "paddingTop": 24,
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": undefined,
                      "letterSpacing": 0.15,
                      "lineHeight": undefined,
                      "minWidth": 65,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "textAlign": "left",
                      "textAlignVertical": "center",
                    },
                    undefined,
                    [
                      {},
                    ],
                    undefined,
                  ]
                }
                testID="text-input-flat"
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
          </View>
          <Text
            collapsable={false}
            maxFontSizeMultiplier={1.5}
            onLayout={[Function]}
            style={
              {
                "color": "#ff4310",
                "fontFamily": "System",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0.25,
                "lineHeight": 20,
                "opacity": 0,
                "paddingHorizontal": 12,
                "paddingVertical": 4,
                "textAlign": "left",
                "transform": [],
                "writingDirection": "ltr",
              }
            }
          />
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "rgba(231, 224, 236, 1)",
                  "borderTopLeftRadius": 2,
                  "borderTopRightRadius": 2,
                },
                {
                  "fontFamily": "calibre_app_regular",
                  "marginBottom": 16,
                  "width": 600,
                },
              ]
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#ff4310",
                  "bottom": 0,
                  "height": 1,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "transform": [
                    {
                      "scaleY": 2,
                    },
                  ],
                  "zIndex": 1,
                }
              }
              testID="text-input-underline"
            />
            <View
              onLayout={[Function]}
              style={
                [
                  {
                    "flexGrow": 1,
                    "paddingBottom": 0,
                    "paddingTop": 0,
                  },
                  {
                    "minHeight": 56,
                  },
                ]
              }
            >
              <View
                pointerEvents="none"
                style={
                  [
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    {
                      "overflow": "hidden",
                    },
                    {
                      "zIndex": 3,
                    },
                  ]
                }
              >
                <View
                  collapsable={false}
                  pointerEvents="none"
                  style={
                    {
                      "bottom": 0,
                      "left": 0,
                      "opacity": 1,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "transform": [
                        {
                          "translateX": 0,
                        },
                      ],
                      "width": 750,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "width": 73,
                      }
                    }
                  >
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      onLayout={[Function]}
                      onTextLayout={[Function]}
                      style={
                        {
                          "color": "#ff4310",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 0,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": 0,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-active"
                    >
                      REENTER PASSWORD
                    </Text>
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      style={
                        {
                          "color": "#ff4310",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 1,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": 0,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-inactive"
                    >
                      REENTER PASSWORD
                    </Text>
                  </View>
                </View>
              </View>
              <TextInput
                cursorColor="#ff4310"
                editable={true}
                keyboardType="email-address"
                maxFontSizeMultiplier={1.5}
                multiline={false}
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="transparent"
                secureTextEntry={true}
                selectionColor="#ffffff"
                style={
                  [
                    {
                      "flexGrow": 1,
                      "margin": 0,
                    },
                    {},
                    {
                      "paddingBottom": 4,
                      "paddingTop": 24,
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": undefined,
                      "letterSpacing": 0.15,
                      "lineHeight": undefined,
                      "minWidth": 65,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "textAlign": "left",
                      "textAlignVertical": "center",
                    },
                    undefined,
                    [
                      {},
                    ],
                    undefined,
                  ]
                }
                testID="text-input-flat"
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
          </View>
          <Text
            collapsable={false}
            maxFontSizeMultiplier={1.5}
            onLayout={[Function]}
            style={
              {
                "color": "#ff4310",
                "fontFamily": "System",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0.25,
                "lineHeight": 20,
                "opacity": 0,
                "paddingHorizontal": 12,
                "paddingVertical": 4,
                "textAlign": "left",
                "transform": [],
                "writingDirection": "ltr",
              }
            }
          />
        </View>
        <View
          style={
            [
              {
                "flexDirection": "row",
                "marginBottom": 12,
              },
              {
                "width": 600,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-end",
                  "flex": 1,
                  "justifyContent": "center",
                },
                {
                  "flex": 0.5,
                },
              ]
            }
          >
            <View
              accessibilityLiveRegion="polite"
              accessibilityRole="checkbox"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": false,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              checkBoxStyle={
                {
                  "flex": 0.5,
                }
              }
              collapsable={false}
              color="rgba(28, 27, 31, 1)"
              focusable={true}
              label="I agree to the terms of use"
              labelPlace="right"
              labelStyle={
                {
                  "color": "#bcfeff",
                }
              }
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onLabelPress={[MockFunction]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "overflow": "hidden",
                  },
                  {
                    "borderRadius": 18,
                    "padding": 6,
                  },
                ]
              }
              textContainerStyle={
                {
                  "flex": 1.5,
                }
              }
              uncheckedColor="rgba(28, 27, 31, 1)"
            >
              <View
                style={
                  {
                    "opacity": 0,
                  }
                }
              >
                <Text />
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "flex": 1,
                  "justifyContent": "center",
                },
                {
                  "flex": 1.5,
                },
              ]
            }
          >
            <Text
              onPress={[MockFunction]}
              style={
                [
                  {
                    "fontFamily": "calibre_app_regular",
                    "fontSize": 14,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "color": "#bcfeff",
                  },
                ]
              }
            >
              I agree to the terms of use
            </Text>
          </View>
        </View>
        <Text
          style={
            [
              {
                "fontFamily": "calibre_app_regular",
                "fontSize": 13,
                "marginBottom": 18,
              },
              {
                "color": "#ff4310",
              },
              undefined,
            ]
          }
        />
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#00ffe6",
              "borderRadius": 16,
              "height": 50,
              "marginBottom": 16,
              "marginRight": undefined,
              "marginTop": 16,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
              "width": 270,
            }
          }
          testID="button-container-outer-layer"
        >
          <View
            collapsable={false}
            needMargin={false}
            screenWidth={400}
            style={
              {
                "backgroundColor": "#00ffe6",
                "borderColor": "transparent",
                "borderRadius": 16,
                "borderStyle": "solid",
                "borderWidth": 0,
                "flex": 1,
                "minWidth": 64,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              }
            }
            testID="button-container"
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "overflow": "hidden",
                  },
                  {
                    "borderRadius": 16,
                  },
                ]
              }
              testID="button"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        [
                          {
                            "marginHorizontal": 16,
                            "marginVertical": 9,
                            "textAlign": "center",
                          },
                          false,
                          {
                            "marginHorizontal": 24,
                            "marginVertical": 10,
                          },
                          undefined,
                          false,
                          {
                            "color": "rgba(255, 255, 255, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          [
                            {
                              "fontFamily": "calibre_app_semibold",
                              "fontSize": 24,
                            },
                            undefined,
                          ],
                        ],
                      ],
                    ]
                  }
                  testID="button-text"
                >
                  Sign Up
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`SignupScreenTemplate renders correctly with ja-JP locale 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#070724",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "space-between",
              "marginLeft": 48,
              "marginRight": 48,
            },
            {
              "backgroundColor": "#070724",
            },
            [
              {
                "maxHeight": 650,
                "maxWidth": 650,
              },
              undefined,
            ],
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "rgba(231, 224, 236, 1)",
                  "borderTopLeftRadius": 2,
                  "borderTopRightRadius": 2,
                },
                {
                  "fontFamily": "calibre_app_regular",
                  "marginBottom": 16,
                  "width": 600,
                },
              ]
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#ff4310",
                  "bottom": 0,
                  "height": 1,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "transform": [
                    {
                      "scaleY": 2,
                    },
                  ],
                  "zIndex": 1,
                }
              }
              testID="text-input-underline"
            />
            <View
              onLayout={[Function]}
              style={
                [
                  {
                    "flexGrow": 1,
                    "paddingBottom": 0,
                    "paddingTop": 0,
                  },
                  {
                    "minHeight": 56,
                  },
                ]
              }
            >
              <View
                pointerEvents="none"
                style={
                  [
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    {
                      "overflow": "hidden",
                    },
                    {
                      "zIndex": 3,
                    },
                  ]
                }
              >
                <View
                  collapsable={false}
                  pointerEvents="none"
                  style={
                    {
                      "bottom": 0,
                      "left": 0,
                      "opacity": 1,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "transform": [
                        {
                          "translateX": 0,
                        },
                      ],
                      "width": 750,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "width": 73,
                      }
                    }
                  >
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      onLayout={[Function]}
                      onTextLayout={[Function]}
                      style={
                        {
                          "color": "#ff4310",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 0,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": 0,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-active"
                    >
                      Eメールアドレス
                    </Text>
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      style={
                        {
                          "color": "#ff4310",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 1,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": 0,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-inactive"
                    >
                      Eメールアドレス
                    </Text>
                  </View>
                </View>
              </View>
              <TextInput
                cursorColor="#ff4310"
                editable={true}
                keyboardType="email-address"
                maxFontSizeMultiplier={1.5}
                multiline={false}
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="transparent"
                selectionColor="#ffffff"
                style={
                  [
                    {
                      "flexGrow": 1,
                      "margin": 0,
                    },
                    {},
                    {
                      "paddingBottom": 4,
                      "paddingTop": 24,
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": undefined,
                      "letterSpacing": 0.15,
                      "lineHeight": undefined,
                      "minWidth": 65,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "textAlign": "left",
                      "textAlignVertical": "center",
                    },
                    undefined,
                    [
                      {},
                    ],
                    undefined,
                  ]
                }
                testID="text-input-flat"
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
          </View>
          <Text
            collapsable={false}
            maxFontSizeMultiplier={1.5}
            onLayout={[Function]}
            style={
              {
                "color": "#ff4310",
                "fontFamily": "System",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0.25,
                "lineHeight": 20,
                "opacity": 0,
                "paddingHorizontal": 12,
                "paddingVertical": 4,
                "textAlign": "left",
                "transform": [],
                "writingDirection": "ltr",
              }
            }
          />
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "rgba(231, 224, 236, 1)",
                  "borderTopLeftRadius": 2,
                  "borderTopRightRadius": 2,
                },
                {
                  "fontFamily": "calibre_app_regular",
                  "marginBottom": 16,
                  "width": 600,
                },
              ]
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#ff4310",
                  "bottom": 0,
                  "height": 1,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "transform": [
                    {
                      "scaleY": 2,
                    },
                  ],
                  "zIndex": 1,
                }
              }
              testID="text-input-underline"
            />
            <View
              onLayout={[Function]}
              style={
                [
                  {
                    "flexGrow": 1,
                    "paddingBottom": 0,
                    "paddingTop": 0,
                  },
                  {
                    "minHeight": 56,
                  },
                ]
              }
            >
              <View
                pointerEvents="none"
                style={
                  [
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    {
                      "overflow": "hidden",
                    },
                    {
                      "zIndex": 3,
                    },
                  ]
                }
              >
                <View
                  collapsable={false}
                  pointerEvents="none"
                  style={
                    {
                      "bottom": 0,
                      "left": 0,
                      "opacity": 1,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "transform": [
                        {
                          "translateX": 0,
                        },
                      ],
                      "width": 750,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "width": 73,
                      }
                    }
                  >
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      onLayout={[Function]}
                      onTextLayout={[Function]}
                      style={
                        {
                          "color": "#ff4310",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 0,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": 0,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-active"
                    >
                      パスワード
                    </Text>
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      style={
                        {
                          "color": "#ff4310",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 1,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": 0,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-inactive"
                    >
                      パスワード
                    </Text>
                  </View>
                </View>
              </View>
              <TextInput
                cursorColor="#ff4310"
                editable={true}
                keyboardType="email-address"
                maxFontSizeMultiplier={1.5}
                multiline={false}
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="transparent"
                secureTextEntry={true}
                selectionColor="#ffffff"
                style={
                  [
                    {
                      "flexGrow": 1,
                      "margin": 0,
                    },
                    {},
                    {
                      "paddingBottom": 4,
                      "paddingTop": 24,
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": undefined,
                      "letterSpacing": 0.15,
                      "lineHeight": undefined,
                      "minWidth": 65,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "textAlign": "left",
                      "textAlignVertical": "center",
                    },
                    undefined,
                    [
                      {},
                    ],
                    undefined,
                  ]
                }
                testID="text-input-flat"
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
          </View>
          <Text
            collapsable={false}
            maxFontSizeMultiplier={1.5}
            onLayout={[Function]}
            style={
              {
                "color": "#ff4310",
                "fontFamily": "System",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0.25,
                "lineHeight": 20,
                "opacity": 0,
                "paddingHorizontal": 12,
                "paddingVertical": 4,
                "textAlign": "left",
                "transform": [],
                "writingDirection": "ltr",
              }
            }
          />
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "rgba(231, 224, 236, 1)",
                  "borderTopLeftRadius": 2,
                  "borderTopRightRadius": 2,
                },
                {
                  "fontFamily": "calibre_app_regular",
                  "marginBottom": 16,
                  "width": 600,
                },
              ]
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#ff4310",
                  "bottom": 0,
                  "height": 1,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "transform": [
                    {
                      "scaleY": 2,
                    },
                  ],
                  "zIndex": 1,
                }
              }
              testID="text-input-underline"
            />
            <View
              onLayout={[Function]}
              style={
                [
                  {
                    "flexGrow": 1,
                    "paddingBottom": 0,
                    "paddingTop": 0,
                  },
                  {
                    "minHeight": 56,
                  },
                ]
              }
            >
              <View
                pointerEvents="none"
                style={
                  [
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    {
                      "overflow": "hidden",
                    },
                    {
                      "zIndex": 3,
                    },
                  ]
                }
              >
                <View
                  collapsable={false}
                  pointerEvents="none"
                  style={
                    {
                      "bottom": 0,
                      "left": 0,
                      "opacity": 1,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "transform": [
                        {
                          "translateX": 0,
                        },
                      ],
                      "width": 750,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "width": 73,
                      }
                    }
                  >
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      onLayout={[Function]}
                      onTextLayout={[Function]}
                      style={
                        {
                          "color": "#ff4310",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 0,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": 0,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-active"
                    >
                      パスワード再入力
                    </Text>
                    <Text
                      collapsable={false}
                      maxFontSizeMultiplier={1.5}
                      numberOfLines={1}
                      style={
                        {
                          "color": "#ff4310",
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": undefined,
                          "left": 0,
                          "letterSpacing": 0.15,
                          "lineHeight": undefined,
                          "maxWidth": 73,
                          "opacity": 1,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "position": "absolute",
                          "textAlign": "left",
                          "top": 30,
                          "transform": [
                            {
                              "translateX": 0,
                            },
                            {
                              "translateY": 0,
                            },
                            {
                              "scale": 1,
                            },
                          ],
                          "writingDirection": "ltr",
                        }
                      }
                      testID="text-input-flat-label-inactive"
                    >
                      パスワード再入力
                    </Text>
                  </View>
                </View>
              </View>
              <TextInput
                cursorColor="#ff4310"
                editable={true}
                keyboardType="email-address"
                maxFontSizeMultiplier={1.5}
                multiline={false}
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="transparent"
                secureTextEntry={true}
                selectionColor="#ffffff"
                style={
                  [
                    {
                      "flexGrow": 1,
                      "margin": 0,
                    },
                    {},
                    {
                      "paddingBottom": 4,
                      "paddingTop": 24,
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": undefined,
                      "letterSpacing": 0.15,
                      "lineHeight": undefined,
                      "minWidth": 65,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "textAlign": "left",
                      "textAlignVertical": "center",
                    },
                    undefined,
                    [
                      {},
                    ],
                    undefined,
                  ]
                }
                testID="text-input-flat"
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
          </View>
          <Text
            collapsable={false}
            maxFontSizeMultiplier={1.5}
            onLayout={[Function]}
            style={
              {
                "color": "#ff4310",
                "fontFamily": "System",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0.25,
                "lineHeight": 20,
                "opacity": 0,
                "paddingHorizontal": 12,
                "paddingVertical": 4,
                "textAlign": "left",
                "transform": [],
                "writingDirection": "ltr",
              }
            }
          />
        </View>
        <View
          style={
            [
              {
                "flexDirection": "row",
                "marginBottom": 12,
              },
              {
                "width": 600,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-end",
                  "flex": 1,
                  "justifyContent": "center",
                },
                {
                  "flex": 0.5,
                },
              ]
            }
          >
            <View
              accessibilityLiveRegion="polite"
              accessibilityRole="checkbox"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": false,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              checkBoxStyle={
                {
                  "flex": 0.5,
                }
              }
              collapsable={false}
              color="rgba(28, 27, 31, 1)"
              focusable={true}
              label="私は利用規約を了承しました。"
              labelPlace="right"
              labelStyle={
                {
                  "color": "#bcfeff",
                }
              }
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onLabelPress={[MockFunction]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "overflow": "hidden",
                  },
                  {
                    "borderRadius": 18,
                    "padding": 6,
                  },
                ]
              }
              textContainerStyle={
                {
                  "flex": 1.5,
                }
              }
              uncheckedColor="rgba(28, 27, 31, 1)"
            >
              <View
                style={
                  {
                    "opacity": 0,
                  }
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                          "transform": [
                            {
                              "scaleX": 1,
                            },
                          ],
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ],
                      {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  󰄬
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "flex": 1,
                  "justifyContent": "center",
                },
                {
                  "flex": 1.5,
                },
              ]
            }
          >
            <Text
              onPress={[MockFunction]}
              style={
                [
                  {
                    "fontFamily": "calibre_app_regular",
                    "fontSize": 14,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "color": "#bcfeff",
                  },
                ]
              }
            >
              私は利用規約を了承しました。
            </Text>
          </View>
        </View>
        <Text
          style={
            [
              {
                "fontFamily": "calibre_app_regular",
                "fontSize": 13,
                "marginBottom": 18,
              },
              {
                "color": "#ff4310",
              },
              undefined,
            ]
          }
        />
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#00ffe6",
              "borderRadius": 16,
              "height": 50,
              "marginBottom": 16,
              "marginRight": undefined,
              "marginTop": 16,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
              "width": 270,
            }
          }
          testID="button-container-outer-layer"
        >
          <View
            collapsable={false}
            needMargin={false}
            screenWidth={400}
            style={
              {
                "backgroundColor": "#00ffe6",
                "borderColor": "transparent",
                "borderRadius": 16,
                "borderStyle": "solid",
                "borderWidth": 0,
                "flex": 1,
                "minWidth": 64,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              }
            }
            testID="button-container"
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "overflow": "hidden",
                  },
                  {
                    "borderRadius": 16,
                  },
                ]
              }
              testID="button"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        [
                          {
                            "marginHorizontal": 16,
                            "marginVertical": 9,
                            "textAlign": "center",
                          },
                          false,
                          {
                            "marginHorizontal": 24,
                            "marginVertical": 10,
                          },
                          undefined,
                          false,
                          {
                            "color": "rgba(255, 255, 255, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          [
                            {
                              "fontFamily": "calibre_app_semibold",
                              "fontSize": 24,
                            },
                            undefined,
                          ],
                        ],
                      ],
                    ]
                  }
                  testID="button-text"
                >
                  サインアップ
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
